automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -5,6 +5,8 @@
     <title></title>
   </head>
   <body>
-
+    <form action="/display_puppy" method="post">
+      <p><input type="text" name="name"></p>
+    </form>
   </body>
 </html>
