--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -7,6 +7,8 @@
   <body>
     <form action="/display_puppy" method="post">
       <p><input type="text" name="name"></p>
+      <p><input type="text" name="breed"></p>
+      <p><input type="text" name="age"></p>
     </form>
   </body>
 </html>
