--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,6 +9,7 @@
       <p><input type="text" name="name"></p>
       <p><input type="text" name="breed"></p>
       <p><input type="text" name="age"></p>
+      <input type="submit">
     </form>
   </body>
 </html>
