automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,7 +9,7 @@
       <p><input type="text" name="name"></p>
       <p><input type="text" name="breed"></p>
       <p><input type="text" name="age"></p>
-      <input type="submit">
+      <input type="submit" class="submit">
     </form>
   </body>
 </html>
