--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,9 +6,9 @@
   </head>
   <body>
     <form action="/display_puppy" method="post">
-      <p><input type="text" name="name"></p>
-      <p><input type="text" name="breed"></p>
-      <p><input type="text" name="age"></p>
+      <p>name<input type="text" name="name"></p>
+      <p>breed<input type="text" name="breed"></p>
+      <p>age<input type="text" name="age"></p>
       <input type="submit" class="submit">
     </form>
   </body>
