--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,7 +9,7 @@
       <p>name<input type="text" name="name"></p>
       <p>breed<input type="text" name="breed"></p>
       <p>age<input type="text" name="age"></p>
-      <input type="submit" id="Submit">
+      <input type="submit" id="submit">
     </form>
   </body>
 </html>
