--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
-
+    <h1>YOUR SUBMITTED PUPPY</h1>
+    <h3>Puppy Name: <%=@puppy.name%></h3>
+    <h3>Puppy Breed: <%=@puppy.breed%></h3>
+    <h3>Puppy Age: <%=@puppy.age%></h3>
   </body>
 </html>
